--- a/ms-seed-rest.properties
+++ b/ms-seed-rest.properties
@@ -1,3 +1,4 @@
+liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.datasource.url=jdbc:postgresql://localhost:5432/redbee
 spring.datasource.username= myuser
 spring.datasource.password= mypass
