change to google db config

--- a/ms-seed-rest.properties
+++ b/ms-seed-rest.properties
@@ -1,7 +1,7 @@
 liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.datasource.url=jdbc:postgresql://localhost:5432/redbee
-spring.datasource.username= myuser
-spring.datasource.password= mypass
+spring.datasource.url=jdbc:postgresql://35.193.77.6:5432/wolox
+spring.datasource.username= postgres
+spring.datasource.password= qBkOr9PMgqw7pMMs
 spring.datasource.platform=postgresql
 server.port = 8081
 
