--- a/ms-seed-rest-prod.properties
+++ b/ms-seed-rest-prod.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/redbee
+spring.datasource.url=jdbc:postgresql://CAGADO
 spring.datasource.username= myuser
 spring.datasource.password= mypass
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
-server.port = 8080
+server.port = 8085
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-user.role=Local
