--- a/ms-blocks-rest-local.properties
+++ b/ms-blocks-rest-local.properties
@@ -1,3 +1,4 @@
+liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.datasource.url=jdbc:postgresql://localhost:5432/cat
 spring.datasource.username= usercat
 spring.datasource.password= passcat
