Added liquibase for prod

--- a/ms-blocks-rest-prod.properties
+++ b/ms-blocks-rest-prod.properties
@@ -1,3 +1,4 @@
+liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.datasource.url=jdbc:postgresql://CAGADO
 spring.datasource.username= myuser
 spring.datasource.password= mypass
