--- a/ms-blocks-rest-local.properties
+++ b/ms-blocks-rest-local.properties
@@ -2,8 +2,5 @@ liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.datasource.url=jdbc:postgresql://localhost:5432/cat
 spring.datasource.username= usercat
 spring.datasource.password= passcat
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.platform=postgresql
 server.port = 8080
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-user.role=Local
