chan ge from xml to yaml

--- a/ms-blocks-rest-local.properties
+++ b/ms-blocks-rest-local.properties
@@ -1,4 +1,4 @@
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.datasource.url=jdbc:postgresql://localhost:5432/cat
 spring.datasource.username= usercat
 spring.datasource.password= passcat
