changed config a local

--- a/ms-blocks-rest.properties
+++ b/ms-blocks-rest.properties
@@ -1,6 +1,12 @@
 liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.datasource.url=jdbc:postgresql://35.193.77.6:5432/wolox
-spring.datasource.username= postgres
-spring.datasource.password= qBkOr9PMgqw7pMMs
+spring.datasource.url=jdbc:postgresql://localhost:5432/cat
+spring.datasource.username= usercat
+spring.datasource.password= passcat
 spring.datasource.platform=postgresql
 server.port = 8080
+# liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+# spring.datasource.url=jdbc:postgresql://35.193.77.6:5432/wolox
+# spring.datasource.username= postgres
+# spring.datasource.password= qBkOr9PMgqw7pMMs
+# spring.datasource.platform=postgresql
+# server.port = 8080
